<resources>
    <string name="player_error">Error initializing YouTube player: %s</string>
    <string name="seek_to">Jump To</string>
    <string name="seek_to_hint">Seconds</string>
    <string name="app_name">"Tricks of Blaze of Battle "</string>
    <string name="action_settings">Settings</string>
    <string name="item_title">Palais Garnier</string>
    <string name="item_desc">The Palais Garnier which locates in Paris was built from 1861 for
        the Paris Opera.
    </string>
    <string name="detail_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
        nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
        irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
        deserunt mollit anim id est laborum.
    </string>
    <string name="detail_location">"8 Rue Scribe, 75009 Paris, France"</string>
    <string name="title_activity_knight_upgrade_page">KnightUpgradePage</string>
    <string name="monsterkill">"Killing a level-3 or higher monster is quite difficult unless you have good dragon research and equipment. \n\nFirst you need to upgrade your dragon, make sure you have atleast 7/10 points in each dragon combat research to hit a lvl-3+ with good damage and  forge some dragon combat accessories if you have chuthlu's/Eater Bunny items,wear them whenever you hit a monster \n\n"
   "After this Lets see how we can kill a monster quickly:\n\n"
        "In order to kill a monster quickly people make mistakes like doing max attack every time,dont hit max attack button just boost the alliance bonus by doing single hits\n\n"
        "Team up to kill a lvl-3+ mob with 3 players and do all single attacks that will boost the allinace bonus and get you mob killed quickly \n\nTIP: Use your farm accounts to kill monsters with your team mates ask them to use thier farm accounts if each player got 1 farm account so he can use 2 dragons(farm and main), 3 players can have 6 dragons to attack a monster that will be really helpful."
    </string>
    <string name="getElites">"When you kill a monster your not sure that it will turn into an elite or not, So as far i have researched elite monsters are spawn in same location everytime, so whenever a monsters turn into elite one just BookMark that location so if u find any other mob in that location after sometime there is a 60-70% possibilty you will get an elite again :)
    </string>
    <string name="challenger_rewards">"Everyone loves to get challenger rewards specially when you working in a team to kill a monster but BOB made it totally random. It doesn't depends on anything like no of hits/first hit/last hit it allocate the challenger name randomly,you can get good challenger rewards if you kill higher lvl monster."
    </string>
    <string name="efficientFarm">"To make a farm account you just have to click on the accounts->switch account->start new game \n\n After starting new game just complete the tutorial and use supreme teleport to get into your main kingdom, remember you can only use supreme teleport before cc-5 so dont upgrade much before teleporting to your kingdom \n Lets see how we can create a good resource producing farms."
    </string>
    <string name="makegems">Gems are the core resource of any war game this is the main revenue generator for developers thats why they release  packs so they can buy it with real money and upgrade faster,but if you dont wanna spend any money then here are some tips to make gems daily.</string>
    <string name="foodFarm">"Food Farm is easy to create and will get you lot of food that you dont have to gather any, to make your farm a good food producer just follow below steps: \n\n 1. Upgrade cc to 10 atleast preferably till cc-15 is best so you can kill lvl-3 monster as well. \n 2. Construct 21 food farms and upgrade it to max. \n 3. Research food production \n 4. Set Lord skills on food production. \n 5. Upgrade dragon and forge some good accessories for food production \n 6. Assign Knight on resource production \n 7. Activate VIP to get resource production boost"
    </string>
    <string name="otherFarms">You can make farms accounts for wood/stone/iron as well just follow the same step given for food farm the only problem is that you cant get any dragon accessory boost for these resources. </string>
    <string name="monsterandlair">1. HIT MONSTERS:\nYou get gifts if you attack a monster, gift level depends on the monster level means level-4 monster will drop higher level gifts than level-3 monster, you also get gems by hitting monsters.\nELITE MONSTERS HAVE HIGHER CHANCE TO DROP GEMS.  </string>
    <string name="monsterandlair2">2. GATHER LAIRS:\nGather as many lairs as you can per day to make more gems,make a team to kill level-3 and higher monster dont kill it solo\nReset dragon skills on gatherings so you can gather quickly\n\n Lvl-1 Lair gives 50  gems\n Lvl-2 Lair gives 100 gems\n Lvl-3 Lair gives 300 gems\n Lvl-4 Lair gives 900 gems\n Lvl-5 Lair gives 1500 gems\n Lvl-6 Lair gives 3000 gems </string>
    <string name="upgradeDragon">You can upgrade your dragon by doing research and using dragon xp there is one more way to make your dragon stronger is to forge some equipments</string>
    <string name="alliancegifts">Dont forget to collect alliance gifts whenever you kill a monster you get a alliance gift, you can get gems from these gifts as well.\nComplete alliance missions to get gold alliance gifts sometimes it gives 300-400 gems</string>
    <string name="eaterbunny">Eater bunny equipments are good for dragon boost forge these equipments listed below</string>
    <string name="goldFarmm">"You dont need any specific account for gold prodution. Yes thats the advantage of it, if you create above mentioned farms then all you need to do is construct houses for gold production, research gold production and can even forge some gold production dragon equipments you will get gold from all your farm accounts."


    </string>
    <string name="chuulthu">Cthulhu Equipemets are also  good for dragon booost listed below</string>
    <string name="gemPalace">You can build gem palace if your civil center is level-9 or up.\nDIG GEMS FOR 1 DAY, yes guys dont go with 3 days/6 days/12 days Calculation has been done you will get 450 gems per day and that is max you can get.</string>
    <string name="events">You can get speedups and gems if u participate in diffrent events.
    \nEvents are of two type\n1. Individual event\n2. Alliance Events\n\nWhatever the event is there is always 3 goals to be achieved which gives speedups, gems and gifts other then they give THEME REWARDS based on the rank you get.\nJust focus on getting goal-3 first if you are unable to reach to the goal-3 ask some points from you allies.\n\nTip: If you have some farm/alt accounts then make some points from those accounts and donate it to your main account :)</string>
    <string name="usegems">Always buy construction chest of 4500 gems for any build/research/training.If you use your gems directly for instant finish it will cost you more.</string>
    <string name="trailFeilds"> You can complete solo and inferno goals to get rewards and gems, below are the tricks to complete lord trial missions. \n\n1. Train 800 t3 troops per hour to get 2X 1000 dragon energy by completing solo event goal-1\n\n2. Use shatter wave to deconstruct a building and then reconstruct it, repeat these steps to complete solo, inferno goals(not recommended) </string>
    <string name="mysteryGifts">Mystery Gifts are again can get you gems just check bottom right on your game screen it refresh in some time interval.\nTip: As I have noticed  mystery box give you SAME GIFT ON PARTICULAR TIME so keep an eye on it.</string>
    <string name="allianceMissions">Complete alliance missions daily to get bronze,silver and gold chest which can get you gems and  various rewards, just ask your ally members to train some batches of troops daily</string>
    <string name="attackingtip">You can either attack solo or do a rally with clan-mates, things to need to do before attacking any city\n1.Scout first to get the info of troops/traps/knight of defending city for better scout result make sure your scout research is 8/10\n2.If you are strong enough to take the smaller city and you dont wanna let defender alert or bubble by scouting then do the quick attack by teleporting next to him\n3.Before attacking any decent upgraded city just prepare the attack first check attack preparation tip for that.</string>
    <string name="rallyTips">Inorder to perform a rally, a rally leader should have good attacking city means thier research/skills/dragon accessories/knight all set on attack Two type of rally we can do \n1. One-hit  Rally \n2.Multi-Hit Rally</string>
    <string name="onehitrally">If you wanna hit opponent only single time than its better the rally leader gets all the reinforcements and teleport near enemy in the last few secs </string>
    <string name="multihitrally">For multi-hit rally, all the rally participents need to teleport near opponent so the rally leader start rally again and to protect from opponent clan-mates they need to use their extra marches to set camps to cover all space so that no one can teleport in that particular area.</string>
    <string name="soloattacking">To perform solo attack you need to know about march capacity,  the max march capacity anyone can have without boost is 300k with max boost(50% march boost) is 450k so while attacking keep in mind you can only attack with max 450k troops so while attacking with t3 troops if you wanna win that attack then to be on safe side just attack only those opponents who got troops half of your march capacity dont attack who got more troops than your march size, its  depends on the research,dragon equipments,lord/dragon skills. you can check it in bonus comparision which is available in the reports  </string>
    <string name="soloattackpart2">As you can see the red arrow shows your bonus is less than your enemy so work on that make it better than your opponent and you will win that.\n While performing an attack with t4s you can kill anyone having t3s easily below are some reports</string>
    <string name="meatShield">MeatShield is very important if you wanna secure your higher lvl troops means if you have t3s than train some t1 troops as a meat shield while attacking someone and if you have t4s than use t3 as meat shield to be very precise suppose your march capacity is 300k and you have t3 troops, To attack someone then use 15-20k t1 troops rest t3s the benefit is only your t1 troops get killed and your t3 will get saved</string>
    <string name="attackpreparation">To perform a good attack you need to prepare for it first, dont rush and send marches in hurry.\n\n1.Use march boost to increase the size of army you can send at a time \n2.You need to have atleast two high lvl knight, assign one in commander and send one with your march to attack\n3.Use Attack Boost\n4.Reset Lord/Dragon skills on troops attack\n5.You should have good troop life research\n6.Dont forget to wear best attacking dragon equipments.\n7.Make sure your VIP is active</string>
    <string name="attackt4">This is a report of defending,Attacker used t4s to hit a me while i am having more than 2M troops</string>
    <string name="meat">As you can see he used t3 troops as meatshield so his t3 troops died and t4 survived</string>
</resources>