
<!--
  ~ Copyright (C) 2015 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~CollapsingToolbarLayout
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="bob.com.example.root.blazeguide.ResourcesScreen">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/attack_collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="@dimen/article_keylines"
            app:expandedTitleMarginStart="@dimen/md_keylines"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/rssimage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/atttack"

                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/attackToolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:background="#560607"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="@dimen/left_margin_36"
            android:paddingRight="@dimen/md_keylines"
            android:paddingTop="@dimen/md_keylines"
            android:weightSum="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/md_keylines"

                android:text="Attacking Tips"
                android:textColor="#FFFF00"
                android:textSize="@dimen/article_titles" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/attackingtip"
                android:textColor="#FFFFFF"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/md_keylines"

                android:text="Attack Preparation"
                android:layout_marginTop="16dp"
                android:textColor="#FFFF00"
                android:textSize="@dimen/article_titles" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/attackpreparation"
                android:textColor="#FFFFFF"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="16dp"
                android:text="Meat Shield"
                android:textColor="#FFFF00"
                android:textSize="@dimen/article_titles" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/meatShield"
                android:textColor="#FFFFFF"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="16dp"
                android:text="Rally Tips"
                android:textColor="#FFFF00"
                android:textSize="@dimen/article_titles" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/rallyTips"
                android:textColor="#FFFFFF"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/md_keylines"
                android:layout_marginBottom="8dp"

                android:text="One-Hit Rally"
                android:textColor="#FFFF00"
                android:textSize="@dimen/article_titles" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/onehitrally"
                android:textColor="#FFFFFF"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/md_keylines"
                android:layout_marginBottom="8dp"
                android:text="Multi-Hit Rally"
                android:textColor="#FFFF00"
                android:textSize="@dimen/article_titles" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/multihitrally"
                android:textColor="#FFFFFF"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="16dp"

                android:text="Solo Attacking Tips"
                android:textColor="#FFFF00"
                android:textSize="@dimen/article_titles" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/soloattacking"
                android:textColor="#FFFFFF"/>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/bonus" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/soloattackpart2"
                android:textColor="#FFFFFF"/>
            <ImageView
                android:id="@+id/t4attack1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/attackt4" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/attackt4"
                android:layout_marginBottom="8dp"
                android:textColor="#FFFFFF"/>

            <ImageView
                android:id="@+id/t4attack2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/meat"
                android:layout_marginBottom="8dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/meat"
                android:textColor="#FFFFFF"
                android:layout_marginBottom="8dp"
                />






        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>
